<resources>
    <string name="app_name">StudyBuddy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>

    <!--string name="deployURL">http://206.87.129.107:8080/Servlet/</string>-->
    <string name="deployURL">http://47.88.53.126:8080/Servlet/</string>>
    <string name="title_activity_booking">BookingActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>>
</resources>
