<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="My Profile" />
        <item
            android:id="@+id/Course"
            android:icon="@drawable/ic_menu_gallery"
            android:title="My Courses" />
        <item
            android:id="@+id/Group"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="My Groups" />
        <item
            android:id="@+id/Setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="Settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
